[gd_scene load_steps=49 format=3 uid="uid://blustjpt4gi0x"]

[ext_resource type="Script" uid="uid://y24af3mavdmp" path="res://Entities/enemies/Common/Skull/Skull.gd" id="1_ks2w7"]
[ext_resource type="Texture2D" uid="uid://cjieyk57jg3ne" path="res://assets/enemy/Skull/Skull_Attack.png" id="2_q6mhb"]
[ext_resource type="Texture2D" uid="uid://5m5qs26cx031" path="res://assets/Image/Effects/Explosion/Explosions.png" id="3_vnird"]
[ext_resource type="Texture2D" uid="uid://vqyxgcgjlscj" path="res://assets/enemy/Skull/Skull_Idle.png" id="4_6cdlu"]
[ext_resource type="Texture2D" uid="uid://dp1oy4mrcv1m" path="res://assets/enemy/Skull/Skull_Run.png" id="5_h34kc"]
[ext_resource type="PackedScene" uid="uid://y7a41xekksbp" path="res://Components/CommonComponents/Hitbox_Component/hitbox_component.tscn" id="6_q6mhb"]
[ext_resource type="PackedScene" uid="uid://ctd5ah1sqp6k3" path="res://Components/EnemiesComponents/Detection_Component/detection_component.tscn" id="6_vnird"]
[ext_resource type="PackedScene" uid="uid://cqmc7ebhwjn8f" path="res://Components/EnemiesComponents/ContactDamage_Component/contact_damage_component.tscn" id="8_6cdlu"]
[ext_resource type="Script" uid="uid://bxtmptgoila5o" path="res://Components/CommonComponents/Health_Component/health_component.gd" id="9_h34kc"]
[ext_resource type="Script" uid="uid://d0itrv4kcfqs1" path="res://Components/CommonComponents/Knockback_Component/knockback_component.gd" id="10_fy84a"]
[ext_resource type="Resource" uid="uid://bs15aiytc4x1a" path="res://Resources/Stat/SkullStat.tres" id="10_mye0v"]
[ext_resource type="PackedScene" uid="uid://dc3v1kmk4vbwx" path="res://Components/EnemiesComponents/Movement_Component/movement_component.tscn" id="12_mye0v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i0h1j"]
atlas = ExtResource("2_q6mhb")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ei3c"]
atlas = ExtResource("2_q6mhb")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijigk"]
atlas = ExtResource("2_q6mhb")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4w8w"]
atlas = ExtResource("2_q6mhb")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ow66"]
atlas = ExtResource("2_q6mhb")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_08nch"]
atlas = ExtResource("2_q6mhb")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikd8g"]
atlas = ExtResource("2_q6mhb")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwy3c"]
atlas = ExtResource("3_vnird")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rfxg"]
atlas = ExtResource("3_vnird")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_djk8a"]
atlas = ExtResource("3_vnird")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5dc4"]
atlas = ExtResource("3_vnird")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c1ev"]
atlas = ExtResource("3_vnird")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aua3t"]
atlas = ExtResource("3_vnird")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsns1"]
atlas = ExtResource("3_vnird")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_175y0"]
atlas = ExtResource("3_vnird")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0fr4"]
atlas = ExtResource("3_vnird")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lshv"]
atlas = ExtResource("4_6cdlu")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmnx4"]
atlas = ExtResource("4_6cdlu")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6rgp"]
atlas = ExtResource("4_6cdlu")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7cye"]
atlas = ExtResource("4_6cdlu")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpr01"]
atlas = ExtResource("4_6cdlu")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_osdy1"]
atlas = ExtResource("4_6cdlu")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vasij"]
atlas = ExtResource("4_6cdlu")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_073md"]
atlas = ExtResource("4_6cdlu")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eicu"]
atlas = ExtResource("5_h34kc")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgk5l"]
atlas = ExtResource("5_h34kc")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqjcn"]
atlas = ExtResource("5_h34kc")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p7kx"]
atlas = ExtResource("5_h34kc")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_37cg3"]
atlas = ExtResource("5_h34kc")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aldvk"]
atlas = ExtResource("5_h34kc")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_2mvqj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0h1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ei3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijigk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4w8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ow66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08nch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikd8g")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwy3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rfxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djk8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5dc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c1ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aua3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsns1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_175y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0fr4")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lshv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmnx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6rgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7cye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpr01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osdy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vasij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_073md")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eicu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgk5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqjcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p7kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37cg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aldvk")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5ffra"]
radius = 29.999998
height = 73.33333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vnird"]
radius = 43.333332
height = 93.333336

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p200p"]
radius = 24.666664
height = 49.33333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_spqrb"]
radius = 28.333332
height = 116.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spqrb"]
size = Vector2(293.3333, 56.666664)

[node name="Skull" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "detection_component") groups=["enemy"]]
position = Vector2(1, 0)
scale = Vector2(0.6, 0.6)
collision_mask = 67
motion_mode = 1
wall_min_slide_angle = 0.017453292
script = ExtResource("1_ks2w7")
SkullStat = ExtResource("10_mye0v")
movement_component = NodePath("Components/MovementComponent")
detection_component = NodePath("Components/DetectionComponent")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Pathfinding" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2mvqj")
animation = &"attack"
offset = Vector2(0, -15)

[node name="Components" type="Node2D" parent="."]

[node name="ContactDamage" parent="Components" instance=ExtResource("8_6cdlu")]
position = Vector2(-1, -31)

[node name="ContactDamage_Collision" type="CollisionShape2D" parent="Components/ContactDamage"]
position = Vector2(1, 11)
rotation = 3.1415925
shape = SubResource("CapsuleShape2D_5ffra")

[node name="HitboxComponent" parent="Components" instance=ExtResource("6_q6mhb")]

[node name="Hitbox" type="CollisionShape2D" parent="Components/HitboxComponent"]
position = Vector2(1.0000001, -18.999998)
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_vnird")

[node name="DetectionComponent" parent="Components" instance=ExtResource("6_vnird")]
visible = false

[node name="HealthComponent" type="Node2D" parent="Components"]
script = ExtResource("9_h34kc")

[node name="KnockbackComponent" type="Node2D" parent="Components" node_paths=PackedStringArray("body")]
script = ExtResource("10_fy84a")
body = NodePath("../..")

[node name="MovementComponent" parent="Components" node_paths=PackedStringArray("body") instance=ExtResource("12_mye0v")]
body = NodePath("../..")

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6.6666665)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_p200p")

[node name="Attack_hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="attack_hitbox" type="CollisionShape2D" parent="Attack_hitbox"]
position = Vector2(96.666664, -13.333333)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_spqrb")
disabled = true

[node name="Attack_detection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_detection"]
position = Vector2(-7.5101852e-06, -13.333333)
shape = SubResource("RectangleShape2D_spqrb")

[connection signal="timeout" from="Pathfinding" to="." method="_on_pathfinding_timeout"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="Attack_hitbox" to="." method="_on_attack_hitbox_area_entered"]
[connection signal="body_entered" from="Attack_hitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="body_entered" from="Attack_detection" to="." method="_on_attack_detection_body_entered"]
